<resources>
    <!-- App Name -->
    <string name="app_name">Fragment</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>

    <!-- Menu Nav -->
    <string name="main_nav_temperature">Température</string>
    <string name="main_nav_meteo">Météo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="temperature_convert_text">%s°C est égal à %s°F</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature_title">Convertir Celsius / Fahrenheit</string>
    <string name="temperature_hint_celsius">Entrez une température</string>
    <string name="temperature_hint_fahrenheit">Entrez une température</string>
    <string name="temperature_button_save">Sauvegarder</string>
    <string name="temperature_unit_farhenheit">°F</string>
    <string name="temperature_unit_celsius">°C</string>
    <string name="action_delete">Effacer</string>
    <string name="ok">OK</string>
    <string name="cancel">ANNULER</string>
    <string name="meteo_hint">Entrez une ville</string>
    <string name="temperature_button_ok">OK</string>
    <string name="meteo_dialog_city_empty">Veuillez saisir un nom de ville</string>
    <string name="meteo_dialog_network">Pas d\'acces internet</string>
</resources>
